2010-01-14  Peter Bloomfield

	* configure.in: require NetworkManager version 0.7.
	* src/main-window.c: use GObject-based API instead of deprecated
	older API.

2010-01-12  Pawel Salek

	* libbalsa/html.c: fix libbalsa_html_popup_menu_widget() arg list.

2010-01-12  Peter Bloomfield

	* libbalsa/html.h: new public method to retrieve the real HTML
	widget.
	* libbalsa/html.c (libbalsa_html_popup_menu_widget): ditto.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(balsa_gtk_html_popup), (bmwt_populate_popup_cb),
	(bm_widget_new_html): use it to implement popup menu for
	WebKitWebView.

2010-01-11  Peter Bloomfield

	* libbalsa/address-book-gpe.c
	(libbalsa_address_book_gpe_alias_complete): free error with
	sqlite3_free() instead of free(); fixes bug #606676 (Stanislav
	Brabec).

2010-01-11  Peter Bloomfield

	* libbalsa/html.h: new API for libbalsa_html_new.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(bm_widget_new_html): use it.
	* libbalsa/html.c (lbh_get_body_content,
	lbh_get_web_view, libbalsa_html_can_zoom,
	libbalsa_html_zoom, libbalsa_html_can_select,
	libbalsa_html_select_all, libbalsa_html_copy,
	libbalsa_html_can_search, libbalsa_html_search_text,
	libbalsa_html_get_selection_bounds): implement new API;
	(lbh_info_bar_realize_cb, lbh_info_bar_widget,
	lbh_resource_request_starting_cb, lbh_info_bar_response_cb,
	libbalsa_html_new): prepend HTML message part with a GtkInfoBar
	offering the option to download images.

2010-01-11  Peter Bloomfield

	* src/balsa-message.c (add_part), (balsa_message_can_select):
	html widgets can select text.

2010-01-11  Peter Bloomfield

	* libbalsa/html.c (lbh_js_get_global_context), (lbh_js_run_script),
	(lbh_js_object_get_property), (libbalsa_html_search_text),
	(libbalsa_html_get_selection_bounds): use JavaScript to locate
	or clear selected text; enable text search.

2010-01-11  Pawel Salek

	* libbalsa/mailbox_imap.c: gmail anwers NO to FETCH, deal with it.

2010-01-10  Albrecht Dreß
